# learning

./: README.md
LIO_SAM_ws/devel/: .catkin  setup.sh
LIO_SAM_ws/devel/lib/pkgconfig/: lio_sam.pc
LIO_SAM_ws/devel/lib/python3/dist-packages/lio_sam/msg/: _cloud_info.py
LIO_SAM_ws/devel/lib/python3/dist-packages/lio_sam/srv/: _save_map.py
LIO_SAM_ws/devel/share/common-lisp/ros/lio_sam/msg/: _package_cloud_info.lisp  cloud_info.lisp
LIO_SAM_ws/devel/share/common-lisp/ros/lio_sam/srv/: save_map.lisp
LIO_SAM_ws/devel/share/gennodejs/ros/lio_sam/msg/: cloud_info.js
LIO_SAM_ws/devel/share/gennodejs/ros/lio_sam/srv/: save_map.js
LIO_SAM_ws/devel/share/lio_sam/cmake/: lio_sam-msg-paths.cmake  lio_samConfig.cmake
LIO_SAM_ws/devel/share/roseus/ros/lio_sam/: manifest.l
LIO_SAM_ws/src/lio-sam/: CMakeLists.txt
LIO_SAM_ws/src/lio-sam/config/: params.yaml
LIO_SAM_ws/src/lio-sam/include/: utility.h
LIO_SAM_ws/src/lio-sam/msg/: cloud_info.msg
LIO_SAM_ws/src/lio-sam/src/: feature_extraction.cpp  image_projection.cpp  imu_preintegration.cpp  map_optmization.cpp
attention/: attention.py
cmake_learning/: CMakeLists.txt  README.md
cmake_learning/src/print_hello_world/: CMakeLists.txt
cmake_learning/src/print_hello_world/include/: print_hello_world.h
cmake_learning/src/print_hello_world/src/: print_hello_world.cpp
cmake_learning/src/protobuf/: CMakeLists.txt
cmake_learning/src/protobuf/proto/: student.pb.cc  student.proto
cmake_learning/src/protobuf/src/: proto_test.cpp
eigen_learning/: CMakeLists.txt
eigen_learning/src/: coordinate_transform.cpp  eigen_geometry.cpp  eigen_learning.cpp  eigen_matrix.cpp
nonlinear_optimization/: CMakeLists.txt  README.md
nonlinear_optimization/log/: g2o_learning.INFO  g2o_learning.llx-pc.llx.log.INFO.20230819-214506.22749  g2o_learning.llx-pc.llx.log.INFO.20230819-214558.22858  g2o_learning.llx-pc.llx.log.INFO.20230819-215132.23383  g2o_learning.llx-pc.llx.log.INFO.20230819-215333.23735  g2o_learning.llx-pc.llx.log.INFO.20230819-215412.23941  g2o_learning.llx-pc.llx.log.INFO.20230819-215536.23948  g2o_learning.llx-pc.llx.log.INFO.20230819-220146.24269  g2o_learning.llx-pc.llx.log.INFO.20230819-220529.24842  g2o_learning.llx-pc.llx.log.INFO.20230819-220556.24874  g2o_learning.llx-pc.llx.log.INFO.20230819-220635.25056  g2o_learning.llx-pc.llx.log.INFO.20230819-220807.25268  g2o_learning.llx-pc.llx.log.INFO.20230819-220848.25487  g2o_learning.llx-pc.llx.log.INFO.20230819-221136.25717  g2o_learning.llx-pc.llx.log.INFO.20230819-221509.26159  g2o_learning.llx-pc.llx.log.INFO.20230819-221540.26367  g2o_learning.llx-pc.llx.log.INFO.20230819-221727.26575  g2o_learning.llx-pc.llx.log.INFO.20230819-221838.26785  g2o_learning.llx-pc.llx.log.INFO.20230819-221904.26984  g2o_learning.llx-pc.llx.log.INFO.20230819-222132.27213
nonlinear_optimization/src/: ceres_learning.cpp  ceres_learning_v1.cpp  g2o_learning.cpp  gauss_newton.cpp
protobuf_learning/proto/: student.pb.h
protobuf_learning/src/: proto_test.cpp
sophus_learning/: CMakeLists.txt  README.md
sophus_learning/data/: test.txt
sophus_learning/scripts/: draw_trajectory.py
sophus_learning/src/: sophus_learning.cpp  trajectory_error.cpp
zmq_learning/: CMakeLists.txt
zmq_learning/include/: struct_header.h
zmq_learning/src/: publisher.cpp  subscriber.cpp
